--- a/static/ng/pdf.html
+++ b/static/ng/pdf.html
@@ -1,4 +1,4 @@
-<div ng-controller="structureCtrl" style="margin: 0 10px">
+<div style="margin: 0 10px">
   <div style="position: fixed; top: 30px; left: 0; bottom: 0; width: 200px; overflow-y: scroll; z-index: 100; font-size: 90%;">
     <div style="padding: 5px;">
       <h3><code>{{file.name}}</code></h3>
