Use normal hrefs instead of loadObject listening

--- a/static/ng/object.html
+++ b/static/ng/object.html
@@ -1,4 +1,4 @@
 <div>
   <h3>Object {{object_number}}:0</h3>
-  <PDFObject object="object"></PDFObject>
+  <PDFObject file="file" object="object"></PDFObject>
 </div>
