--- a/static/ng/pdf.html
+++ b/static/ng/pdf.html
@@ -1,6 +1,6 @@
 <div style="margin: 0 10px">
-  <div style="position: fixed; top: 30px; left: 0; bottom: 0; width: 200px; overflow-y: scroll; z-index: 100; font-size: 90%;">
-    <div style="padding: 5px;">
+  <div class="thumbnails">
+    <div>
       <h3><code>{{file.name}}</code></h3>
       <small>{{file.size | number}} bytes</small>
 
@@ -8,7 +8,7 @@
       <PDFObject file="file" object="file.trailer"></PDFObject>
     </div>
 
-    <div ng-repeat="page in pages" style="padding: 5px; border-top: 1px solid #B86;">
+    <div ng-repeat="page in pages" style="border-top: 1px solid #B86;">
       <h4><a ui-sref="pdfs.show.page({index: $index})">Page {{$index + 1}}</a></h4>
       <PDFObject file="file" object="page"></PDFObject>
     </div>
