Do page span rendering in a React component; transform the PDF coordinate space -- (0,0) in the lower-left -- to HTML absolute positioning layout space -- (0,0) in the upper-left. Also allow alt+command clicking to load an object reference in-place.

--- a/static/ng/object.html
+++ b/static/ng/object.html
@@ -1,4 +1,4 @@
-<div>
-  <h3>Object {{object_number}}:0</h3>
+<h3>Object {{object_number}}:0</h3>
+<div ng-if="file && object">
   <PDFObject file="file" object="object"></PDFObject>
 </div>
