--- a/static/ng/pdf.html
+++ b/static/ng/pdf.html
@@ -2,14 +2,16 @@
   <div class="thumbnails">
     <div>
       <h3><code>{{file.name}}</code></h3>
-      <small>{{file.size | number}} bytes</small>
+      <small>File size: {{file.size | number}} bytes</small>
 
       <h3>Trailer</h3>
+      <!-- the controller responds with a raw trailer object -->
       <PDFObject file="file" object="file.trailer"></PDFObject>
     </div>
 
+    <!-- the controller responds with raw PDF page objects -->
     <div ng-repeat="page in pages" style="border-top: 1px solid #B86;">
-      <h4><a ui-sref="pdfs.show.page({index: $index})">Page {{$index + 1}}</a></h4>
+      <h4><a ui-sref="pdfs.show.page({page_number: $index + 1})">Page {{$index + 1}}</a></h4>
       <PDFObject file="file" object="page"></PDFObject>
     </div>
   </div>
