--- a/static/ng/page.html
+++ b/static/ng/page.html
@@ -5,5 +5,8 @@
   <label>
     <input type="checkbox" ng-model="$storage.outline"> Show outlines
   </label>
-  <PDFPage page="page"></PDFPage>
+  <label>
+    Scale <input type="range" min="0.1" max="2.0" step="0.1" ng-model="$storage.scale"> ({{$storage.scale * 100 | number:0}}%)
+  </label>
+  <PDFPage page="page" scale="$storage.scale"></PDFPage>
 </div>
