Incorporate recent changes to upstream pdf API

--- a/static/ng/pdf.html
+++ b/static/ng/pdf.html
@@ -15,7 +15,7 @@
       <PDFObject file="file" object="page"></PDFObject>
     </div>
   </div>
-  <div style="margin: 0 0 20px 200px">
+  <div style="margin-left: 200px">
     <ui-view></ui-view>
   </div>
 </div>
