--- a/static/ng/page.html
+++ b/static/ng/page.html
@@ -1,39 +1,42 @@
-<h3>Page {{page_number}}</h3>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>X<sub>min</sub></th>
-      <th>Y<sub>min</sub></th>
-      <th>X<sub>max</sub></th>
-      <th>Y<sub>max</sub></th>
-    </tr>
-  </thead>
-  <tbody ng-init="box_names = ['MediaBox', 'bounds', 'header', 'footer']">
-    <tr ng-repeat="box_name in box_names">
-      <td><b>{{box_name}}</b></td>
-      <td ng-repeat="coord in page.canvas[box_name] track by $index">{{coord | number}}</td>
-    </tr>
-  </tbody>
-</table>
-
-<div style="margin: 10px 0">
-  <label>
-    <input type="checkbox" ng-model="$storage.outline"> Show outlines
-  </label>
-</div>
-<div style="margin: 10px 0">
-  <div>Scale ({{$storage.scale * 100 | number:0}}%)</div>
-  <input type="range" min="0.1" max="2.0" step="0.1" ng-model="$storage.scale" style="width: 200px">
-</div>
+<h2>Page {{page_number}}</h2>
+<code>MediaBox: {{page.MediaBox}}</code>
 
 <div ng-if="page" ng-class="{outline: $storage.outline}">
-  <div class="page" ng-style="{transformOrigin: '0% 0%', transform: 'scale(' + $storage.scale + ')'}">
-    <div class="MediaBox" ng-style="page.MediaBox | rectStyle"></div>
-    <div class="bounds" ng-if="page.canvas.bounds" ng-style="page.canvas.bounds | rectStyle"></div>
-    <div class="header" ng-if="page.canvas.header" ng-style="page.canvas.header | rectStyle"></div>
-    <div class="footer" ng-if="page.canvas.footer" ng-style="page.canvas.footer | rectStyle"></div>
-    <PDFPage page="page.canvas"></PDFPage>
+  <h3>Layout</h3>
+  <div style="margin: 10px 0">
+    <label>
+      <input type="checkbox" ng-model="$storage.outline"> Show outlines
+    </label>
+  </div>
+  <div style="margin: 10px 0">
+    <div>Scale ({{$storage.scale * 100 | number:0}}%)</div>
+    <input type="range" min="0.1" max="4.0" step="0.1" ng-model="$storage.scale" style="width: 400px">
+  </div>
+
+  <div ng-style="{transformOrigin: '0% 0%', transform: 'scale(' + $storage.scale + ')'}">
+    <div class="page" ng-style="page.canvas.outerBounds | rectStyle">
+      <div ng-repeat="section in page.canvas.sections" ng-class="section.name" ng-style="section.outerBounds | rectStyle"></div>
+      <PDFPage page="page.canvas"></PDFPage>
+    </div>
+  </div>
+  <!-- CSS Transform does not affect document flow, so we add a spacer -->
+  <div ng-style="{width: '100px', height: ((page.canvas.outerBounds.maxY - page.canvas.outerBounds.minY) * $storage.scale | px)}"></div>
+
+  <h3>Sections</h3>
+  <div ng-repeat="section in page.canvas.sections" class="section">
+    <h4>{{section.name}}</h4>
+    <div>
+      [
+        {{section.outerBounds.minX | number}},
+        {{section.outerBounds.minY | number}},
+        {{section.outerBounds.maxX | number}},
+        {{section.outerBounds.maxY | number}}
+      ]
+    </div>
+    <ol>
+      <li ng-repeat="line in section.lines track by $index">
+        <span class="line">{{line.string}}</span>
+      </li>
+    </ol>
   </div>
 </div>
