Add citations controller; other styling fixes

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8">
   <title>pdfi user interface</title>
   <base href="/">
-  <link rel="icon" href="img/favicon.ico" type="image/x-icon">
+  <link href="img/favicon.ico" rel="icon" type="image/x-icon">
   <link href="site.css" rel="stylesheet" type="text/css">
   <!-- angular libraries -->
   <script src="lib/angular.min.js"></script>
