Separate content stream and text canvas; update app.ts and models.ts to reflect latest API

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- misc-js angular library -->
   <script src="lib/angular-plugins.js"></script>
   <!-- browserify bundle -->
-  <script src="bundle.js"></script>
+  <script src="build/bundle.js"></script>
 </head>
 <body ng-app="app">
   <flash></flash>
