--- a/index.html
+++ b/index.html
@@ -1,21 +1,12 @@
 <!DOCTYPE html>
-<head>
-  <meta charset="utf-8">
-  <title>pdfi user interface</title>
-  <base href="/">
-  <link href="img/favicon.ico" rel="icon" type="image/x-icon">
-  <link href="site.css" rel="stylesheet" type="text/css">
-  <!-- angular libraries -->
-  <script src="lib/angular.min.js"></script>
-  <script src="lib/angular-resource.min.js"></script>
-  <script src="lib/angular-ui-router.min.js"></script>
-  <script src="lib/ngStorage.min.js"></script>
-  <!-- misc-js angular library -->
-  <script src="lib/angular-plugins.js"></script>
-  <!-- browserify bundle -->
-  <script src="build/bundle.js"></script>
-</head>
-<body ng-app="app">
-  <flash></flash>
-  <ui-view></ui-view>
-</body>
+<html>
+  <head>
+    <meta charset="utf-8">
+    <title>pdfi user interface</title>
+    <link href="/img/favicon.ico" rel="icon" type="image/x-icon">
+  </head>
+  <body>
+    <div id="app"></div>
+    <script src="/build/bundle.js"></script>
+  </body>
+</html>
