Use relative URLs for JS bundle and favicon

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>pdfi user interface</title>
-    <link href="/img/favicon.ico" rel="icon" type="image/x-icon">
+    <link href="img/favicon.ico" rel="icon" type="image/x-icon">
   </head>
   <body>
     <div id="app"></div>
-    <script src="/build/bundle.js"></script>
+    <script src="build/bundle.js"></script>
   </body>
 </html>
