--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>pdfi user interface</title>
-    <link href="img/favicon.ico" rel="icon" type="image/x-icon">
+    <link href="favicon.ico" rel="icon" type="image/x-icon">
   </head>
   <body>
     <div id="app"></div>
